report and monitor work on clickhouse

--- a/docs/_snippets/install-cli.mdx
+++ b/docs/_snippets/install-cli.mdx
@@ -15,6 +15,7 @@ pip install 'elementary-data[redshift]'
 pip install 'elementary-data[databricks]'
 pip install 'elementary-data[athena]'
 pip install 'elementary-data[trino]'
+pip install 'elementary-data[clickhouse]'
 ## Postgres doesn't require this step
 ```
 
