--- a/docs/_snippets/oss/adapters-cards.mdx
+++ b/docs/_snippets/oss/adapters-cards.mdx
@@ -246,6 +246,19 @@
       </svg>
     }
   ></Card>
+    <Card
+    title="dbt-clickhouse"
+    icon={
+      <svg
+        height="40"
+        viewBox="15 15 100 100"
+        width="40"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+      <path d="m0 7h1v1h-1z" fill="#f00"/><path d="m0 0h1v7h-1zm2 0h1v8h-1zm2 0h1v8h-1zm2 0h1v8h-1zm2 3.25h1v1.5h-1z" fill="#fc0"/>
+      </svg>
+    }
+  ></Card>
   <Card
     title="dbt-trino"
     icon={
