--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,8 +1,14 @@
 ---
-title: "Elementary Cloud Platform Quickstart"
+title: "Quickstart the Elementary Cloud Platform"
 sidebarTitle: "Quickstart"
 icon: "circle-play"
 ---
+There are two ways to get started, depending on what works best for your team:
+
+- **Start a 30-day free trial** and set everything up yourself — perfect for smaller teams or hands-on users.
+- **For larger teams or more tailored needs, [book a demo](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)** and our team will help you get started.
+
+### Self-Serve Setup (Free Trial)
 
 <Snippet file="cloud/quickstart-steps.mdx" />
 
