--- a/docs/_snippets/cloud/quickstart-steps.mdx
+++ b/docs/_snippets/cloud/quickstart-steps.mdx
@@ -9,7 +9,10 @@
     [Create your first environment](/cloud/onboarding/connect-data-warehouse) and sync the Elementary schema.  
     Note: Elementary can't access your data. It only requires access to logs, test results, and metadata.
   </Step>
-  <Step title="Congratulations!" icon="party-horn">
+  <Step title="Connect your stack" icon="party-horn">
+Connect your code repositories, messaging and incident tools, and BI platforms to get full visibility and collaboration across your data workflows. See [all available integrations](/features/integrations).
+  </Step>
+  <Step title="Invite your team!" icon="party-horn">
     You're done with initial onboarding. Now you can [invite team members](/cloud/manage-team) to join!
   </Step>
 </Steps>
