update cloud quickstart

--- a/docs/_snippets/cloud/quickstart-steps.mdx
+++ b/docs/_snippets/cloud/quickstart-steps.mdx
@@ -10,7 +10,8 @@
     Note: Elementary can't access your data. It only requires access to logs, test results, and metadata.
   </Step>
   <Step title="Connect your stack" icon="party-horn">
-Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), and [BI platforms](/cloud/integrations/bi/connect-bi-tool) to get full visibility and collaboration across your data workflows. See [all available integrations](/features/integrations).
+Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), and [BI platforms](/cloud/integrations/bi/connect-bi-tool) to get full visibility and collaboration across your data workflows.
+See all available integrations [here](/features/integrations).
   </Step>
   <Step title="Invite your team!" icon="party-horn">
     You're done with initial onboarding. Now you can [invite team members](/cloud/manage-team) to join!
