--- a/docs/_snippets/cloud/quickstart-steps.mdx
+++ b/docs/_snippets/cloud/quickstart-steps.mdx
@@ -9,7 +9,7 @@
     [Create your first environment](/cloud/onboarding/connect-data-warehouse) and sync the Elementary schema.  
     Note: Elementary can't access your data. It only requires access to logs, test results, and metadata.
   </Step>
-  <Step title="Connect your stack" icon="party-horn">
+  <Step title="Connect your stack">
 Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), and [BI platforms](/cloud/integrations/bi/connect-bi-tool) to get full visibility and collaboration across your data workflows.
 See all available integrations [here](/features/integrations).
   </Step>
