--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -12,18 +12,11 @@ There are two ways to get started, depending on what works best for your team:
 
 <Snippet file="cloud/quickstart-steps.mdx" />
 
+### Get the most out of Elementary
+To explore everything the platform has to offer:
+- Browse the [Elementary Cloud feature overview](/cloud/features)
+- Watch our [demo videos](https://www.elementary-data.com/elementary-cloud-demo-videos) for a guided walkthrough of key capabilities
+
 ### Need help with onboarding?
 
-We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call](https://cal.com/maayansa/elementary-intro-docs).
-
-### Demo Videos
-
-🎥 Learn more about features available on Elementary Cloud by watching the [demo videos](https://www.elementary-data.com/elementary-cloud-demo-videos).
-
-## What's next?
-
-1. [Connect Slack or MS Teams](/cloud/guides/enable-slack-alerts) for alerting 🔔
-
-2. [Connect your code repository](/cloud/integrations/code-repo/connect-code-repo) to add tests configuration from the cloud 🔌
-
-3. [Connect your BI tool](/cloud/integrations/bi/connect-bi-tool) to automatically extend the lineage to dashboards 🚀
+We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call]!(https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5).
