--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -19,4 +19,4 @@ To explore everything the platform has to offer:
 
 ### Need help with onboarding?
 
-We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call]!(https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5).
+We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)!
