--- a/docs/features/data-governance/critical_assets.mdx
+++ b/docs/features/data-governance/critical_assets.mdx
@@ -54,7 +54,7 @@ Once an asset is marked as **critical**, you will be able to:
 - **Identify it in the UI**, where it will be visually highlighted.
 - **Receive alerts** when upstream issues may impact the critical asset.
 - **Filter incidents** by their impact on critical assets.
-- **Track the health of critical data assets** over time through dashboard monitoring (Coming soon).
+- **Track the health of critical data assets** over time through dashboard monitoring.
 
 ## **Test Coverage Analysis (Coming Soon)**
 
