--- a/docs/features/data-governance/critical_assets.mdx
+++ b/docs/features/data-governance/critical_assets.mdx
@@ -54,7 +54,9 @@ Once an asset is marked as **critical**, you will be able to:
 - **Identify it in the UI**, where it will be visually highlighted.
 - **Receive alerts** when upstream issues may impact the critical asset.
 - **Filter incidents** by their impact on critical assets.
-- **Track the health of critical data assets** over time through dashboard monitoring.
+- **Track the health score of critical data assets** over time through dashboard monitoring.
+
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1744804630/critical-asset-filter.gif" />
 
 ## **Test Coverage Analysis (Coming Soon)**
 
