--- a/docs/features/alerts-and-incidents/alert-rules.mdx
+++ b/docs/features/alerts-and-incidents/alert-rules.mdx
@@ -4,21 +4,26 @@ title: "Alert Rules"
 
 <Snippet file="/_snippets/cloud/cloud-feature-tag.mdx" />
 
-Elementary Cloud allows you to create rules to route your alerts.
-Each rule is a combination of a filter and a destination.
+Elementary Cloud allows you to create alert routing rules, which define where alerts go and under what conditions. Each rule is a combination of filters and destinations.
 
-The destination is a messaging app ([Slack](/cloud/integrations/alerts/slack), [Microsoft Teams](/cloud/integrations/alerts/ms-teams), etc.) 
-or incident management ([PagerDuty](/cloud/integrations/alerts/pagerduty), [Opsgenie](/cloud/integrations/alerts/opsgenie), etc.)
-[integration](/features/alerts-and-incidents/alerts-and-incidents-overview#supported-alert-integrations), 
-and for supporting tools a specific channel.
+### Destinations
+A destination can be a messaging app (like ([Slack](/cloud/integrations/alerts/slack) or [Microsoft Teams](/cloud/integrations/alerts/ms-teams)) or an incident management tool (like [PagerDuty](/cloud/integrations/alerts/pagerduty or [Opsgenie](/cloud/integrations/alerts/opsgenie)). For [supported tools](/features/alerts-and-incidents/alerts-and-incidents-overview#supported-alert-integrations), you can also specify the exact channel or team the alert should be sent to.
+You can route each alert to one or multiple destinations, whether they’re in the same app or spread across different tools.
 
-<Tip>
-  The order of rules matters!
-  When the alerts are fetched, each alert is evaluated against all the rules,
-  until a rule matches. The alert is then routed to the destination of the
-  matching rule, and no further rules are evaluated. 
-</Tip>
+### Filters
+Filters define what kinds of alerts should be routed through a rule. You can filter by:
+- Assets — model name, owner, tag, or critical status
+- Test types — for example, volume anomalies, freshness anomalies, model errors, dbt tests etc.
+This allows you to control exactly which alerts are sent to which destination.
 
+### Rule Order Matters
+The order of your rules is important. Here’s how it works:
+
+- When an alert is generated, it's evaluated in order, from top to bottom.
+- As soon as a rule matches, the alert is routed to that rule’s destination.
+- No further rules are checked after the first match.
+
+If you want alerts to be routed based on all applicable rules (not just the first match), we’re testing a Beta feature that enables this. Reach out if you’d like early access!
 
 <video
   autoPlay
