--- a/docs/features/alerts-and-incidents/alert-rules.mdx
+++ b/docs/features/alerts-and-incidents/alert-rules.mdx
@@ -12,7 +12,7 @@ You can route each alert to one or multiple destinations, whether they’re in t
 
 ### Filters
 Filters define what kinds of alerts should be routed through a rule. You can filter by:
-- Assets — model name, owner, tag, or critical status
+- Assets — model name, owner, tag, or status
 - Test types — for example, volume anomalies, freshness anomalies, model errors, dbt tests etc.
 This allows you to control exactly which alerts are sent to which destination.
 
