--- a/docs/features/alerts-and-incidents/alert-rules.mdx
+++ b/docs/features/alerts-and-incidents/alert-rules.mdx
@@ -7,7 +7,7 @@ title: "Alert Rules"
 Elementary Cloud allows you to create alert routing rules, which define where alerts go and under what conditions. Each rule is a combination of filters and destinations.
 
 ### Destinations
-A destination can be a messaging app (like ([Slack](/cloud/integrations/alerts/slack) or [Microsoft Teams](/cloud/integrations/alerts/ms-teams)) or an incident management tool (like [PagerDuty](/cloud/integrations/alerts/pagerduty or [Opsgenie](/cloud/integrations/alerts/opsgenie)). For [supported tools](/features/alerts-and-incidents/alerts-and-incidents-overview#supported-alert-integrations), you can also specify the exact channel or team the alert should be sent to.
+A destination can be a messaging app (like ([Slack](/cloud/integrations/alerts/slack) or [Microsoft Teams](/cloud/integrations/alerts/ms-teams)) or an incident management tool (like [PagerDuty](/cloud/integrations/alerts/pagerduty) or [Opsgenie](/cloud/integrations/alerts/opsgenie)). For [supported tools](/features/alerts-and-incidents/alerts-and-incidents-overview#supported-alert-integrations), you can also specify the exact channel or team the alert should be sent to.
 You can route each alert to one or multiple destinations, whether they’re in the same app or spread across different tools.
 
 ### Filters
@@ -16,9 +16,8 @@ Filters define what kinds of alerts should be routed through a rule. You can fil
 - Test types — for example, volume anomalies, freshness anomalies, model errors, dbt tests etc.
 This allows you to control exactly which alerts are sent to which destination.
 
-### Rule Order Matters
+### Rule order matters
 The order of your rules is important. Here’s how it works:
-
 - When an alert is generated, it's evaluated in order, from top to bottom.
 - As soon as a rule matches, the alert is routed to that rule’s destination.
 - No further rules are checked after the first match.
@@ -35,9 +34,10 @@ If you want alerts to be routed based on all applicable rules (not just the firs
 ></video>
 
 
-### Default alert rule
+### Alert rules default configuration
 
-The channel you choose when connecting your messaging app ([Slack](/cloud/integrations/alerts/slack), [Microsoft Teams](/cloud/integrations/alerts/ms-teams), etc.)
+- The channel you choose when connecting your messaging app ([Slack](/cloud/integrations/alerts/slack), [Microsoft Teams](/cloud/integrations/alerts/ms-teams), etc.)
 is automatically added as a default alert rule, that sends all the failures to that channel without any filtering.
-By default, warnings do not send alerts. 
+- By default, warnings do not send alerts. 
+
 To modify, deactivate or add more rules, simply navigate to the `Alert Rules` page in the menu.
