--- a/docs/features/anomaly-detection/automated-monitors.mdx
+++ b/docs/features/anomaly-detection/automated-monitors.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Introduction"
 Once your environment is set up, we automatically collect metadata from your warehouse, which our ML models run on.
 The models are operational when the initial backfill is completed, there is no "loading / training period" - Elementary will collect enough historical data after setup to train the models.
 
-Monitors are automatically created on all of your sources, and additional ones can be added manually in the Test Configuration page. Their results are displayed in the application in the same way as package tests.
+Monitors are automatically created on all of your sources, and additional ones can be [added, edited and removed manually](/features/anomaly-detection/monitors-configuration). Their results are displayed in the application in the same way as package tests.
 
 #### Benefits of automated monitors
 
