--- a/docs/features/anomaly-detection/monitors-configuration.mdx
+++ b/docs/features/anomaly-detection/monitors-configuration.mdx
@@ -15,7 +15,7 @@ To easily add a new automated monitor, follow these steps:
 - Click "Add Test", and choose a 'Table Test'
 - Choose one or more tables you would like to test
 - Filter on Elementary Cloud, and choose your preferred test - [Volume](/features/anomaly-detection/automated-volume) or [freshness](/features/anomaly-detection/automated-freshness).
-- Set up the test configurations, and add metadata if needed.
+- Set up the test configurations, and add metadata if needed. Learn more about all supported settings [here](/features/anomaly-detection/monitors-configuration#supported-settings).
 - Review and submit your test. No PR needed - the test is set up. 
 
 ## Editing automated anomaly detection monitors
@@ -40,21 +40,6 @@ allowfullscreen
 alt="Anomaly settings simulator"
 ></iframe>
 
-## Supported settings
-
-#### All monitors
-
-<Snippet file="cloud/features/anomaly-detection/all-anomalies-configuration.mdx" />
-
-#### Volume monitor
-
-<Snippet file="cloud/features/anomaly-detection/volume-configuration.mdx" />
-
-#### Freshness monitor
-
-<Snippet file="cloud/features/anomaly-detection/freshness-configuration.mdx" />
-
-
 ## Deleting monitors
 
 There are two ways to delete monitors from the UI. 
@@ -70,4 +55,18 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 allowfullscreen
 alt="Disable test"
 ></iframe>
+
+## Supported settings
+
+#### All monitors
+
+<Snippet file="cloud/features/anomaly-detection/all-anomalies-configuration.mdx" />
+
+#### Volume monitor
+
+<Snippet file="cloud/features/anomaly-detection/volume-configuration.mdx" />
+
+#### Freshness monitor
+
+<Snippet file="cloud/features/anomaly-detection/freshness-configuration.mdx" />
 
