--- a/docs/features/anomaly-detection/monitors-configuration.mdx
+++ b/docs/features/anomaly-detection/monitors-configuration.mdx
@@ -5,20 +5,20 @@ sidebarTitle: "Monitors configuration"
 
 Automated anomaly detection monitors are configured on all of your sources by default. Elementary test configuration page also allows you to add aditional monitors, and to edit or remove existing ones.
 
-## Adding automated anomaly detection monitors
+## Adding anomaly detection monitors
 
 Automated anomaly detection monitors (Cloud tests) can be [added directly through the UI](/features/data-tests/data-tests-overview), just like other data tests.
 Unlike dbt-based tests, these monitors are not part of your dbt project code, so they’re added immediately — with no need to create or approve a pull request.
 
 To easily add a new automated monitor, follow these steps:
 - Navigate to the Test Configuration page
-- Click "Add Test", and choose a 'Table Test'
+- Click 'Add Test', and choose a 'Table Test'
 - Choose one or more tables you would like to test
 - Filter on Elementary Cloud, and choose your preferred test - [Volume](/features/anomaly-detection/automated-volume) or [freshness](/features/anomaly-detection/automated-freshness).
 - Set up the test configurations, and add metadata if needed. Learn more about all supported settings [here](/features/anomaly-detection/monitors-configuration#supported-settings).
 - Review and submit your test. No PR needed - the test is set up. 
 
-## Editing automated anomaly detection monitors
+## Editing anomaly detection monitors
 
 You can change the default settings and finetune the monitors to your needs using the `Anomaly settings` on each test. 
 
@@ -40,7 +40,7 @@ allowfullscreen
 alt="Anomaly settings simulator"
 ></iframe>
 
-## Deleting monitors
+## Remove anomaly detection monitors
 
 There are two ways to delete monitors from the UI. 
 - Test configuration page - Choose one or more tests, and an option to delete them will be available at the bottom of the page.
