--- a/docs/features/data-governance/manage-metadata.mdx
+++ b/docs/features/data-governance/manage-metadata.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Manage metdata"
+title: "Manage metadata"
 ---
 
 Manage your metadata directly from the [Elementary Catalog](/features/collaboration-and-communication/catalog), with no need to update code manually. This streamlines governance workflows, reduces manual effort, and improves visibility and consistency across your assets.
 
 From a single interface, you can view and filter assets, edit metadata fields individually or in bulk, and even use AI to generate high-quality descriptions—saving time and enhancing data discoverability. All changes are version-controlled via pull requests to keep your dbt project in sync.
 
-To get the most out of this feature, check out our [Data Governance Best Practices](https://docs.elementary-data.com/best-practices/governance-for-observability) guide.
+To get the most out of this feature, check out our [Data Governance Best Practices](/best-practices/governance-for-observability) guide.
 
 ## Overview
 
