--- a/docs/features/data-governance/ai-descriptions.mdx
+++ b/docs/features/data-governance/ai-descriptions.mdx
@@ -5,6 +5,15 @@ sidebarTitle: "AI descriptions (Beta)"
 
 Elementary now offers an AI-powered description generation feature that helps you create clear, informative descriptions for your data assets without manual effort.
 
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video"
+  src="https://res.cloudinary.com/do5hrgokq/video/upload/v1744879961/ai-descriptions.mp4"
+></video>
+
 ### Why AI-Generated Descriptions Matter
 
 - **Improved Discoverability** - Well-described assets are easier to find and understand
