--- a/docs/features/data-governance/manage-metadata.mdx
+++ b/docs/features/data-governance/manage-metadata.mdx
@@ -8,6 +8,15 @@ From a single interface, you can view and filter assets, edit metadata fields in
 
 To get the most out of this feature, check out our [Data Governance Best Practices](/best-practices/governance-for-observability) guide.
 
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video"
+  src="https://res.cloudinary.com/do5hrgokq/video/upload/v1744887842/edit-metadata.mp4"
+></video>
+
 ## Overview
 
 Managing metadata such as owners, tags, descriptions, and critical asset status is essential for effective data governance. With Elementary you can:
