--- a/docs/data-tests/how-anomaly-detection-works.mdx
+++ b/docs/data-tests/how-anomaly-detection-works.mdx
@@ -3,6 +3,8 @@ title: "Elementary anomaly detection tests"
 sidebarTitle: "Elementary anomaly detection"
 ---
 
+<Card horizontal="true" title="Webinar: Deep dive into anomaly detection" icon="circle-play" href="https://www.elementary-data.com/webinar/anomaly-detection-tests-deep-dive-webinar"/>
+
 Elementary data anomaly detection tests monitor a specific metric (like row count, null rate, average value, etc.) and compare recent values to historical values.
 This is done to detect [significant changes and deviations](/data-tests/data-anomaly-detection), that are probably data reliability issues.
 
