--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -3,6 +3,8 @@ title: "volume_anomalies"
 sidebarTitle: "Volume anomalies"
 ---
 
+<Card horizontal="true" title="Ask Elementary AI to help generate your anomaly test" icon="wand-magic-sparkles" href="https://elementary-community.slack.com/archives/C08HW57FGN9"/>
+
 `elementary.volume_anomalies`
 
 Monitors the row count of your table over time per time bucket (if configured without `timestamp_column`, will count table total rows).
