--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -3,7 +3,7 @@ title: "volume_anomalies"
 sidebarTitle: "Volume anomalies"
 ---
 
-<Card horizontal="true" title="Ask Elementary AI to help generate your anomaly test" icon="wand-magic-sparkles" href="https://elementary-community.slack.com/archives/C08HW57FGN9"/>
+<Card horizontal="true" title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" href="https://elementary-community.slack.com/archives/C08HW57FGN9"/>
 
 `elementary.volume_anomalies`
 
