--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -3,7 +3,10 @@ title: "volume_anomalies"
 sidebarTitle: "Volume anomalies"
 ---
 
-<Card horizontal="true" title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" href="https://elementary-community.slack.com/archives/C08HW57FGN9"/>
+<Card horizontal="true" title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" href="https://join.slack.com/t/elementary-community/shared_invite/zt-34j8a1r4z-jjukw_e_jsBYL5jCHN1qIQ">
+Let the chatbot know what you need, and it will create your test.
+</Card>
+
 
 `elementary.volume_anomalies`
 
