--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Volume anomalies"
 ---
 
 <Card horizontal="true" title="Generate your anomaly test with Elementary AI" icon="wand-magic-sparkles" href="https://join.slack.com/t/elementary-community/shared_invite/zt-34j8a1r4z-jjukw_e_jsBYL5jCHN1qIQ">
-Let the chatbot know what you need, and it will create your test.
+Let our Slack chatbot create the anomaly test you need.
 </Card>
 
 
