--- a/docs/data-tests/anomaly-detection-tests-oss-vs-cloud.mdx
+++ b/docs/data-tests/anomaly-detection-tests-oss-vs-cloud.mdx
@@ -1,5 +1,5 @@
 ---
-title: "OSS vs Cloud Anomaly Detection Tests"
+title: "OSS vs Cloud Anomaly Detection"
 ---
 
 Elementary OSS and Elementary Cloud Platform both offer data anomaly detection. However, there are significant differences in implementation.
