--- a/docs/cloud/manage-team.mdx
+++ b/docs/cloud/manage-team.mdx
@@ -11,7 +11,7 @@ You can invite team members to join you! 🎉
 Click on your initials on the top right of the screen and select `Team` to invite users.
 When you invite a user, you can assign them a role. The roles are:
 1. "Admin" - Has full access to all assets including team management
-2. "Can Edit" - can manage environments and configurations, but cannot manage team members
+2. "Can Edit" - can manage configurations, but cannot manage team members and environments.
 3. "Can View" - can view data assets, test results, incidents and lineage
 
 You can also add custom roles with specific permissions to suit your needs. Talk to our support team to set this up.
