add first Elementary AI button

--- a/docs/data-tests/anomaly-detection-configuration/anomaly-direction.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-direction.mdx
@@ -2,8 +2,10 @@
 title: "anomaly_direction"
 sidebarTitle: "anomaly_direction"
 ---
+<Snippet file="docs/_snippets/ai-generate-test.mdx" />
 
 `anomaly_direction: both | spike | drop`
+
 
 By default, data points are compared to the expected range and check if these are below or above it.
 For some data monitors, you might only want to flag anomalies if they are above the range and not under it, and vice versa.
