--- a/docs/data-tests/anomaly-detection-configuration/anomaly-direction.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-direction.mdx
@@ -2,7 +2,7 @@
 title: "anomaly_direction"
 sidebarTitle: "anomaly_direction"
 ---
-<Snippet file="docs/_snippets/ai-generate-test.mdx" />
+<Snippet file="ai-generate-test.mdx" />
 
 `anomaly_direction: both | spike | drop`
 
